chore: Update to 1.21.1